--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Add Network"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_add_network"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Network"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="298dp" />
 
 </android.support.constraint.ConstraintLayout>
