--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="24dp"
-        android:text="Configured Networks"/>
+        android:text="@string/configuredNetWorkListName"/>
 
     <ScrollView
         android:id="@+id/scroll_network_list"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:text="@string/btn_add_network" />
 
     <Button
