--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -59,13 +59,13 @@
                 android:layout_marginTop="10dp"
                 android:text="@string/btn_manage_contacts" />
 
-            <include
-                layout="@layout/layout_my_invitations"
+            <com.example.eric.wishare.WiMyInvitationsButton
+                android:id="@+id/btn_my_invitations"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
     </LinearLayout>
