--- a/client/app/src/main/res/layout/layout_configured_network_list_item.xml
+++ b/client/app/src/main/res/layout/layout_configured_network_list_item.xml
@@ -1,56 +1,100 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp"
+<ru.rambler.libs.swipe_layout.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="wrap_content">
 
+    <!--CENTER. app:gravity="center" - is default value -->
     <LinearLayout
+        android:id="@+id/center_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="4dp">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_wifi_black_48dp"/>
+        android:orientation="vertical">
+
         <LinearLayout
-            android:layout_marginLeft="16dp"
+            android:layout_marginTop="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:orientation="horizontal"
+            android:layout_marginLeft="4dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_wifi_black_48dp"/>
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textSize="20sp"
-                    android:id="@+id/tv_network_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="belkin-6022"/>
-
-                <ImageView
-                    android:layout_marginLeft="8dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:id="@+id/iv_configured_status"
-                    android:src="@drawable/ic_warning_orange_24dp"/>
-
-            </LinearLayout>
-
-
-            <TextView
-                android:textSize="16sp"
-                android:id="@+id/tv_active_users"
+                android:layout_marginLeft="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="3 active users"/>
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textSize="20sp"
+                        android:id="@+id/tv_network_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="belkin-6022"/>
+
+                    <ImageView
+                        android:layout_marginLeft="8dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:id="@+id/iv_configured_status"
+                        android:src="@drawable/ic_warning_orange_24dp"/>
+
+                </LinearLayout>
+
+
+
+
+                <TextView
+                    android:textSize="16sp"
+                    android:id="@+id/tv_active_users"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="3 active users"/>
+            </LinearLayout>
+
         </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#837d7d"></LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+    <!--RIGHT-->
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="60dp"
+        android:layout_height="match_parent"
+        android:background="#ca2f2f"
+        app:gravity="right"
+        app:bring_to_clamp="100dp"
+        app:clamp="self"
+        app:sticky="none">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center">
+            <ImageButton
+                android:id="@+id/iv_trash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+            <!--
+            <ImageButton
+                android:id="@+id/iv_trash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_delete_black_24dp"/>
+                -->
+        </LinearLayout>
+    </LinearLayout>
+</ru.rambler.libs.swipe_layout.SwipeLayout>
