--- a/client/app/src/main/res/layout/layout_edit_text_hint.xml
+++ b/client/app/src/main/res/layout/layout_edit_text_hint.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <RelativeLayout android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:gravity="bottom"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <EditText
@@ -13,10 +16,68 @@
 
     <TextView
         android:gravity="bottom"
+        android:textAlignment="center"
+        android:id="@+id/text_view"
         android:layout_toRightOf="@id/edit_text"
         android:layout_width="wrap_content"
         android:textSize="20sp"
-        android:layout_height="match_parent"
-        android:paddingBottom="12dp"
+        android:layout_height="wrap_content"
         android:text="Gb"/>
 </RelativeLayout>
+-->
+
+<!--
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+-->
+
+
+<LinearLayout
+    android:layout_marginTop="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="right"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <TextView
+        android:id="@+id/label"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:textSize="18sp"
+        android:layout_marginBottom="12dp"
+        android:gravity="bottom"
+        android:text="Data Limit: "/>
+    <LinearLayout
+        android:id="@+id/edit_text_perm_hint"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:layout_gravity="bottom">
+        <EditText
+            android:id="@+id/edit_text"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:hint="100"
+            android:gravity="bottom"
+            android:visibility="visible"/>
+        <TextView
+            android:gravity="bottom"
+            android:id="@+id/text_view"
+            android:layout_width="wrap_content"
+            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="8dp"
+            android:text="Gb"/>
+    </LinearLayout>
+    <Spinner
+        android:gravity="bottom"
+        android:id="@+id/spinner"
+        android:entries="@array/data_limits"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
+
