Made a class for the Permitted Contacts

--- a/client/app/src/main/res/layout/activity_network.xml
+++ b/client/app/src/main/res/layout/activity_network.xml
@@ -53,12 +53,14 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_lhs"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Revoke Access"/>
 
         <Button
+            android:id="@+id/btn_rhs"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
