--- a/client/app/src/main/res/layout/tabbed_view_permitted_contacts.xml
+++ b/client/app/src/main/res/layout/tabbed_view_permitted_contacts.xml
@@ -13,11 +13,13 @@
         android:orientation="horizontal">
 
         <CheckBox
+            android:id="@+id/cb_select_all"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
 
         <Button
+            android:id="@+id/btn_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Name"
@@ -25,6 +27,7 @@
             style="@style/Base.Widget.AppCompat.Button.Borderless"/>
 
         <Button
+            android:id="@+id/btn_data"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Data"
@@ -32,6 +35,7 @@
             style="@style/Base.Widget.AppCompat.Button.Borderless"/>
 
         <Button
+            android:id="@+id/btn_expires"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Expires"
