--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"  >
 
 
     <LinearLayout
@@ -65,6 +65,8 @@
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="60dp"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
                 android:text="@string/btn_show_notification" />
 
             <Button
@@ -74,6 +76,8 @@
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
                 android:text="@string/btn_add_network" />
             <Button
                 android:id="@+id/btn_manage_contacts"
@@ -82,6 +86,8 @@
                 android:layout_marginEnd="40dp"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
                 android:text="@string/btn_manage_contacts" />
 
             <com.example.eric.wishare.WiMyInvitationsButton
