--- a/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
@@ -11,27 +11,31 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:checked="false"
-        android:layout_weight="1"/>
-
-
-    <Button
-        android:id="@+id/btn_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
-
-    <!-- Jacob
-    <Button
-        android:id="@+id/btn_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
+        android:layout_weight="1"
+        style="@drawable/ripple"
         android:background="@drawable/ripple"
+        android:theme="@style/WhiteCheck"/>
+
+
+    <!--<Button-->
+        <!--android:id="@+id/btn_name"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="4"-->
+        <!--style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>-->
+
+
+    <Button
+        android:id="@+id/btn_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
         android:typeface="normal"
+        android:textAllCaps="false"
         android:text="hello wrold"
-        style="@drawable/ripple"/>
-        -->
+        style="@drawable/ripple"
+        android:background="@drawable/ripple"/>
+
 
     <TextView
         android:id="@+id/tv_data"
