--- a/client/app/src/main/res/values/styles.xml
+++ b/client/app/src/main/res/values/styles.xml
@@ -1,12 +1,20 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/themelight</item>
+        <item name="colorPrimaryDark">@color/themedark</item>
+        <item name="colorAccent">@color/Black</item>
+        <item name="colorControlHighlight">@color/Gold</item>
+        <item name="colorBackgroundFloating">@color/DeepPink</item>
+        <item name="android:textColorPrimary">@color/WhiteSmoke</item>
     </style>
+    <style name="WhiteCheck">
+        <item name="colorAccent">@color/themelight</item>
+    </style>
+
+    <style name="WiShareTheme" parent="AppTheme" />
 
     <declare-styleable name="WiEditTextPermHint">
         <attr name="entries" format="reference" />
