--- a/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
@@ -24,7 +24,6 @@
         <!--android:layout_weight="4"-->
         <!--style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>-->
 
-
     <Button
         android:id="@+id/btn_name"
         android:layout_width="0dp"
@@ -34,7 +33,8 @@
         android:textAllCaps="false"
         android:text="hello wrold"
         style="@drawable/ripple"
-        android:background="@drawable/ripple"/>
+        android:background="@drawable/ripple"
+        android:gravity="left|center_vertical"/>
 
 
     <TextView
