--- a/client/app/src/main/res/layout/layout_invitable_contacts.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent"
             style="@drawable/ripple"
             android:background="@drawable/ripple"
-            android:theme="@style/WhiteCheck"/>
+            android:theme="@style/greenCheck"/>
 
         <Button
             android:id="@+id/btn_name"
