--- a/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1"
         style="@drawable/ripple"
         android:background="@drawable/ripple"
-        android:theme="@style/WhiteCheck"/>
+        android:theme="@style/greenCheck"/>
 
     <Button
         android:id="@+id/btn_name"
