--- a/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
+++ b/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         style="@drawable/ripple"
         android:background="@drawable/ripple"
-        app:tabIndicatorColor="@color/themelight"
+        app:tabIndicatorColor="@color/themeGreen"
         app:tabBackground="@drawable/ripple">
 
     </android.support.design.widget.TabLayout>
