--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -141,5 +141,5 @@
     <color name="Navy">#000080</color>
     <color name="Black">#000000</color>
     <color name="themedark">#808080</color>
-    <color name="themelight">#1A964E</color>
+    <color name="themeGreen">#1A964E</color>
 </resources>
