--- a/client/app/src/main/res/layout/activity_network.xml
+++ b/client/app/src/main/res/layout/activity_network.xml
@@ -45,12 +45,11 @@
             android:src="@drawable/ic_search_black_24dp"/>
 
         <EditText
-            android:layout_marginLeft="4dp"
+            android:id="@+id/edit_text_search_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Search contacts..."/>
-
-
+            android:hint="@string/edit_text_search_bar_hint"
+            android:inputType="textPersonName" />
     </LinearLayout>
 
     <com.example.eric.wishare.WiTabbedScrollView
