--- a/client/app/src/main/res/layout/activity_contact.xml
+++ b/client/app/src/main/res/layout/activity_contact.xml
@@ -2,67 +2,109 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_contact"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ContactActivity">
+<LinearLayout
+    android:id="@+id/ll_contact_top"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:orientation="vertical"
+    app:layout_constraintTop_toTopOf="parent">
 
+    <LinearLayout
+    android:id="@+id/ll_phone"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="30dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="12dp"
+    android:layout_marginTop="8dp"
+    android:textAlignment="center"
+    app:layout_constraintTop_toTopOf="@id/cl_contact"
+    android:orientation="horizontal">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Phone Number: "
+        android:textSize="24sp"/>
     <TextView
         android:id="@+id/tv_contact_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="555-555-5555"
-        android:textSize="24sp"
+        android:textSize="24sp" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/tv_permitted_networks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/ll_phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="20sp"
+        android:textAlignment="center"/>
 
     <ScrollView
         android:id="@+id/scroll_network_list"
-        android:layout_width="368dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_contact_to_network"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_contact_number">
+        android:background="@color/themedarker">
 
-       <!-- <TextView
+    </ScrollView>
+</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_contact_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@id/cl_contact"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_contact_top">
+
+
+        <Button
+            android:id="@+id/btn_revoke_access"
+            style="@drawable/ripple"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Shared Networks"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="97dp" />-->
-    </ScrollView>
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ripple"
+            android:text="Revoke access"
+            app:layout_constraintBottom_toTopOf="@id/btn_add_contact_to_network"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/ll_contact_bottom" />
 
-    <Button
-        android:id="@+id/btn_add_contact_to_network"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Invite to network"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/btn_add_contact_to_network"
+            style="@drawable/ripple"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ripple"
+            android:text="Invite to network"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/scroll_network_list" />
 
-    <Button
-        android:id="@+id/btn_revoke_access"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Revoke access"
-        app:layout_constraintBottom_toTopOf="@id/btn_add_contact_to_network"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+    </LinearLayout>
+    <include layout="@layout/layout_test"/>
+
 
 </android.support.constraint.ConstraintLayout>
