--- a/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
@@ -1,28 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:weightSum="10">
+    android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/cb_select"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        style="@drawable/ripple"
-        android:background="@drawable/ripple"
-        android:theme="@style/greenCheck"/>
+    <ru.rambler.libs.swipe_layout.SwipeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="10">
+            <CheckBox
+                android:id="@+id/cb_select"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
+                android:theme="@style/greenCheck"/>
+            <Button
+                android:id="@+id/btn_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="9"
+                android:typeface="normal"
+                android:textAllCaps="false"
+                android:text="hello world"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"/>
+        </LinearLayout>
+    </ru.rambler.libs.swipe_layout.SwipeLayout>
 
-    <Button
-        android:id="@+id/btn_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="9"
-        android:typeface="normal"
-        android:textAllCaps="false"
-        android:text="hello wrold"
-        style="@drawable/ripple"
-        android:background="@drawable/ripple"/>
+    <net.cachapa.expandablelayout.ExpandableLayout
+        android:id="@+id/eric"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_weight="9"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="has access to these networks:"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/items">
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <Button
+                        android:id="@+id/btn_invite_contact"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Invite"
+                        style="@drawable/ripple"
+                        android:background="@drawable/ripple"/>
+
+                    <Button
+                        android:id="@+id/btn_visit_profile"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Visit Profile"
+                        style="@drawable/ripple"
+                        android:background="@drawable/ripple"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+
+    </net.cachapa.expandablelayout.ExpandableLayout>
+
 
 </LinearLayout>
