--- a/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
+++ b/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
@@ -5,24 +5,69 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@drawable/ripple"
-        android:background="@drawable/ripple"
-        app:tabIndicatorColor="@color/themeGreen"
-        app:tabBackground="@drawable/ripple">
+        android:layout_height="match_parent">
 
-    </android.support.design.widget.TabLayout>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@drawable/ripple"
+            android:background="@drawable/ripple"
+            app:tabIndicatorColor="@color/themeGreen"
+            app:tabBackground="@drawable/ripple">
 
-    <com.example.eric.wishare.WiTabbedScrollViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tab_layout">
-    </com.example.eric.wishare.WiTabbedScrollViewPager>
+        </android.support.design.widget.TabLayout>
 
+        <com.example.eric.wishare.WiTabbedScrollViewPager
+            app:layout_constraintTop_toBottomOf="@id/tab_layout"
+            app:layout_constraintBottom_toTopOf="@+id/layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@id/tab_layout">
+
+        </com.example.eric.wishare.WiTabbedScrollViewPager>
+
+        <LinearLayout
+            app:layout_constraintTop_toBottomOf="@id/view_pager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/btn_lhs"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
+                android:text="Cancel"/>
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/btn_rhs"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
+                android:text="Revoke Access"/>
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </LinearLayout>
